# flan

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  shell.nix
.cargo/: config.toml
src/: codemap.rs  driver.rs  env.rs  error.rs  infer.rs  lib.rs  main.rs  syntax.rs  utils.rs
src/cfg/: file.rs  mod.rs  opt_parse.rs  opts.rs
src/infer/: env.rs  errors.rs  mod.rs
src/output/: mod.rs
src/sourcemap/: loc.rs  mod.rs  pos.rs  source_analysis.rs  sourcemap.rs  span.rs
src/syntax/: errors.rs  lexer.rs  mod.rs  parser.rs
src/utils/: codemap.rs  mod.rs  path.rs  source_analysis.rs  sourcemap.rs
tests/: cfg_tests.rs  codemap.rs  codemap_tests.rs  path_tests.rs  simd.rs  sourcemap_tests.rs  syntax_tests.rs  tests.rs  utils.rs  write_tests.rs
tests/bugs/: bug1.rs  bug2.rs  bug3.rs
