[package]
name = "flan"
version = "0.1.0"
authors = ["yokodake <ngyj@cinnabar.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codemap = "0.1.3"

[[bin]]
name = "flan"
path = "src/main.rs"

[lib]
name = "flan"
path = "src/lib.rs"
