[package]
name = "flan"
version = "0.1.0"
authors = ["yokodake <ngyj@cinnabar.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
serde = {version = "1.0.116",  features = ["derive"]}
toml = "0.5.6"


[[bin]]
name = "flan"
path = "src/main.rs"

[lib]
name = "flan"
path = "src/lib.rs"


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"